@@ -20,6 +20,7 @@ ver 0.17 (2011/??/??)
   - raop: new output plugin
   - shout: add possibility to set url
   - roar: new output plugin for RoarAudio
+  - winmm: fail if wrong device specified instead of using default device
 * playlist:
   - allow references to songs outside the music directory
 * state_file: add option "restore_paused"
